# UsamaAliceWhite-PyPI

./: LICENSE  README.md  pyproject.toml
UsamaAliceWhite/: __init__.py  py.typed
UsamaAliceWhite/Core/: MetaClass.py  Pattern.py  __init__.py
UsamaAliceWhite/Desktop/: Monitor.py  __init__.py
UsamaAliceWhite/Device/: Monitor.py  __init__.py
UsamaAliceWhite/Log/: Logging.py  _Handler.py  _Logger.py  __init__.py
UsamaAliceWhite/Log/Core/: Constant.py  MetaClass.py  __init__.py
UsamaAliceWhite/Log/Logic/: Handler.py  Logger.py  __init__.py
UsamaAliceWhite/Logging/Share/: __init__.py
UsamaAliceWhite/System/: Process.py  __init__.py
