[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["UsamaAliceWhite*"]


[tool.setuptools.package-data]
"*" = ["*.*"]


[project]
name = "UsamaAliceWhite"
version = "7.0.0"
authors = [{name= "UsamaAliceWhite"}]
readme = "README.md"
license = {file= "LICENSE"}
requires-python = ">=3.10"
description = "Python utility library."
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]


[project.urls]
"GitHub" = "https://github.com/UsamaAliceWhite/UsamaAliceWhite-PyPI"